# RealityScenes

./: .gitignore  README.md
RealityScenes/: .gitignore  Makefile  dub.json  dub.selections.json  ldc2.conf
RealityScenes-Android/: .gitignore  CMakeLists.txt  ey_scene.cpp  ey_scene.h  ey_shared.cpp  ey_shared.h  main.cpp  settings.gradle
RealityScenes-Android/app/: build.gradle
RealityScenes-Android/app/src/main/: AndroidManifest.xml
RealityScenes-Android/app/src/main/assets/shaders/: phong.fragment.glsl  phong.vertex.glsl
RealityScenes-Android/app/src/main/res/values/: strings.xml
RealityScenes/android-project/: .gitignore
RealityScenes/android-project/app/: build.gradle  proguard-rules.pro
RealityScenes/android-project/app/jni/src/: Android.mk  CMakeLists.txt
RealityScenes/android-project/app/src/main/: AndroidManifest.xml
RealityScenes/android-project/app/src/main/java/com/yoonicode/realityscenes/: RealityScenes.java
RealityScenes/android-project/app/src/main/res/values/: strings.xml
RealityScenes/cpp/: app.cpp
RealityScenes/source/: app.d
RealityScenes/source/helpers/: sdl_controller.d
Shaders/: phong.fragment.glsl  phong.vertex.glsl
realityscenes-openxr/app/src/main/: AndroidManifest.xml
